--- a/anon-gui/.settings/org.eclipse.wst.common.component
+++ b/anon-gui/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="anon-gui">
+        <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/src/main/webapp/WEB-INF/web.xml"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
@@ -16,10 +17,13 @@
         <dependent-module archiveName="anon-service-0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-service/anon-service">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="anon-test-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-test/anon-test">
+        <dependent-module archiveName="anon-security-0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-security/anon-security">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="anon-gui"/>
+        <dependent-module archiveName="anon-test-0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-test/anon-test">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/anon-gui/target/classes"/>
+        <property name="context-root" value="anon-gui-0.1-SNAPSHOT-enterprise"/>
     </wb-module>
 </project-modules>
