--- a/anon-gui/src/main/webapp/components/menu.xhtml
+++ b/anon-gui/src/main/webapp/components/menu.xhtml
@@ -17,8 +17,9 @@
 	
 			<p:menuitem value="Execute"
 					outcome="/pages/exec.xhtml" icon="ui-icon-star" disabled="#{empty anonConfig.anonMethods}"/>
-	
-			
+					
+			<p:menuitem value="Logout" icon="ui-icon-star" rendered="#{infoBacking.isEnterprise()}"
+					url="/perform_logout" />
 
 		</p:menubar>
 	</h:form>
