--- a/anon-gui/src/main/webapp/layout/layout.xhtml
+++ b/anon-gui/src/main/webapp/layout/layout.xhtml
@@ -14,13 +14,22 @@
 
 	<h:body>
 		<h:form>
-			<p:growl id="msgs" showDetail="true" autoUpdate="true" globalOnly="false"/>
+			<p:growl id="msgs" showDetail="true" autoUpdate="true"
+				globalOnly="false" />
 		</h:form>
+
+		<p:layout style="min-width:400px">
+			<p:layoutUnit position="north" resizable="false" style="border: none;" size="55">
+				<ui:include src="/components/menuBar.xhtml" />
+			</p:layoutUnit>
+			<p:layoutUnit position="west" resizable="false" style="border: none;">
+				<ui:include src="/components/menuPanel.xhtml" />
+			</p:layoutUnit>
+			<p:layoutUnit position="center" id="centerUnit">
+				<ui:insert name="insert-content" />
+			</p:layoutUnit>
+		</p:layout>
 		
-		<ui:include src="/components/menu.xhtml"/>
-		
-		<ui:insert name="insert-content"/>
-		 
 	</h:body>
 </f:view>
 </html>
