--- a/anon-gui/src/main/webapp/resources/css/basic.css
+++ b/anon-gui/src/main/webapp/resources/css/basic.css
@@ -9,3 +9,11 @@
 .centered {
 	margin: 0 auto;
 }
+
+.ui-layout-center {
+overflow-x:hidden !important;
+}
+
+.ui-layout-center .ui-layout-unit-content {
+overflow-x:hidden !important;
+} 
