updated primefaces to 5.1, bootstrap theme to 1.0.10 added execute page to new design

--- a/anon-gui/src/main/webapp/components/menuBar.xhtml
+++ b/anon-gui/src/main/webapp/components/menuBar.xhtml
@@ -8,7 +8,7 @@
 
 	<h:form id="menuForm">
 
-		<p:panel id="menuBar" style="height:50px; background: #888;">
+		<p:panel id="menuBar" style="height:50px; background: #BBB;">
 
 			<h:outputText value="Anonimecs"/>
 			
