--- a/anon-gui/src/main/webapp/layout/layout.xhtml
+++ b/anon-gui/src/main/webapp/layout/layout.xhtml
@@ -17,7 +17,7 @@
 		<p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />       
   
   		<p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-		    <h:outputText value="Loading database info" />
+		    <h:outputText value="Loading..." />
 		</p:dialog>
 	
 		<h:form>
