--- a/anon-gui/src/main/webapp/layout/layout.xhtml
+++ b/anon-gui/src/main/webapp/layout/layout.xhtml
@@ -17,13 +17,10 @@
 		<p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />       
   
   		<p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-		    <h:outputText value="Loading..." />
+  			<h:outputText value="Loading..."/>
 		</p:dialog>
-	
-		<h:form>
-			<p:growl id="msgs" showDetail="true" autoUpdate="true"
-				globalOnly="false" />
-		</h:form>
+			
+		<p:growl id="msgs" showDetail="true" autoUpdate="true" globalOnly="false" />
 
 		<p:layout fullPage="true">
 			<p:layoutUnit position="north" resizable="true" style="border: none;">
