new url rewrite provider

--- a/anon-gui/src/main/webapp/components/breadCrumb.xhtml
+++ b/anon-gui/src/main/webapp/components/breadCrumb.xhtml
@@ -6,10 +6,10 @@
 	
 	<p:breadCrumb>
 		   	<p:menuitem value="Categories" 	url="#" />
-		   	<p:menuitem value="Connect" 	url="/doConnect" />
-		   	<p:menuitem value="Table list" 	rendered="#{step > 0}" 	url="/listTables" />
-		   	<p:menuitem value="Column list" rendered="#{step > 1}" 	url="/listColumns" />
-		   	<p:menuitem value="Anonymize" 	rendered="#{step > 2}" 	url="/doAnonymize" />
+		   	<p:menuitem value="Connect" 	url="/connect/" />
+		   	<p:menuitem value="Table list" 	rendered="#{step > 0}" 	url="/tables-list/" />
+		   	<p:menuitem value="Column list" rendered="#{step > 1}" 	url="/columns-list/" />
+		   	<p:menuitem value="Anonymize" 	rendered="#{step > 2}" 	url="/method/" />
 	</p:breadCrumb>
 
 </ui:composition>
