--- a/anon-gui/src/main/webapp/components/menuPanel.xhtml
+++ b/anon-gui/src/main/webapp/components/menuPanel.xhtml
@@ -12,23 +12,23 @@
 		<p:panelMenu id="menuPanel" style="width:200px">
 		
 			<p:submenu label="Database Connections" >
-				<p:menuitem value="Connect" url="/doConnect"
+				<p:menuitem value="Connect" url="/connect/"
 					icon="ui-icon-star" />
-				<p:menuitem value="Add" url="/addConnection"
+				<p:menuitem value="Add" url="/connection-add/"
 					icon="ui-icon-disk" />
-				<p:menuitem value="Edit" url="/listConnection"
+				<p:menuitem value="Edit" url="/connection-list/"
 					icon="ui-icon-arrowrefresh-1-w" />
 			</p:submenu>
 			<p:submenu label="Configure">
-				<p:menuitem value="Table list" url="/listTables" 
+				<p:menuitem value="Table list" url="/tables-list/" 
 					disabled="#{!databasePanelBacking.connected}" icon="ui-icon-close" />
-				<p:menuitem value="Column list" url="/listColumns" 
+				<p:menuitem value="Column list" url="/columns-list/" 
 					disabled="#{empty editedTableBacking.editedTable}" icon="ui-icon-close" />
-				<p:menuitem value="Anonymize" url="/doAnonymize" 
+				<p:menuitem value="Anonymize" url="/method/" 
 					disabled="#{null eq editedTableBacking.editedColumn}" icon="ui-icon-close" />
 			</p:submenu>
 			<p:submenu label="Run">
-				<p:menuitem value="Execute" url="/doExecute"
+				<p:menuitem value="Execute" url="/execute/"
 					icon="ui-icon-close" />
 			</p:submenu>
 			
