added robotframework gui test base

--- a/anon-gui/src/main/webapp/components/menuBar.xhtml
+++ b/anon-gui/src/main/webapp/components/menuBar.xhtml
@@ -17,7 +17,7 @@
 				<h:outputText value="Not connected" rendered="#{not databasePanelBacking.connected}"/>
 				<h:outputText value="Connected to #{databasePanelBacking.databaseConfig.url}" rendered="#{databasePanelBacking.connected}"/>
 			
-				<p:button type="button" value="Logout" icon="ui-icon-extlink" rendered="#{infoBacking.isEnterprise()}" href="/perform_logout" style="margin-left: 10px"/>
+				<p:button type="button" id="logout" value="Logout" icon="ui-icon-extlink" rendered="#{infoBacking.isEnterprise()}" href="/perform_logout" style="margin-left: 10px"/>
 			
 			</h:panelGrid>
 		
