--- a/anon-gui/src/main/webapp/components/menuPanel.xhtml
+++ b/anon-gui/src/main/webapp/components/menuPanel.xhtml
@@ -12,7 +12,7 @@
 		<p:panelMenu id="menuPanel" style="width:200px">
 		
 			<p:submenu label="Database Connections" >
-				<p:menuitem value="Connect" url="/connect/"
+				<p:menuitem value="Connection" url="/connect/"
 					icon="ui-icon-star" />
 				<p:menuitem value="Add" url="/connection-add/"
 					icon="ui-icon-disk" />
