make icons and names less explicit

--- a/anon-gui/src/main/webapp/components/menuBar.xhtml
+++ b/anon-gui/src/main/webapp/components/menuBar.xhtml
@@ -10,7 +10,8 @@
 
 		<p:panel id="menuBar" styleClass="menuBar" style="background-image: url('#{resource['images:anonimecs.png']}');">
 		
-			<h1>Anonimecs</h1>
+<!-- 			<h1>Anonimecs</h1> -->
+			<h1>........</h1>
 		
 			<h:panelGrid columns="4" style="float: right;">	
 				<h:outputText value="Connected to #{databasePanelBacking.databaseConfig.guiName} (#{databasePanelBacking.databaseConfig.url})" styleClass="headline" rendered="#{databasePanelBacking.connected}"/>
