--- a/anon-gui/.settings/org.eclipse.wst.common.component
+++ b/anon-gui/.settings/org.eclipse.wst.common.component
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="anon-gui">
-        <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/src/main/webapp/WEB-INF/enterprise_edition_web.xml"/>
+        <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/src/editionDependent/free_edition_web.xml"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="anon-persistence-1.3-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-persistence/anon-persistence">
+        <dependent-module archiveName="anon-persistence-1.4-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-persistence/anon-persistence">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="anon-core-1.3-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-core/anon-core">
+        <dependent-module archiveName="anon-core-1.4-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-core/anon-core">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="anon-exec-1.3-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-exec/anon-exec">
+        <dependent-module archiveName="anon-exec-1.4-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-exec/anon-exec">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="anon-service-1.3-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-service/anon-service">
+        <dependent-module archiveName="anon-service-1.4-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-service/anon-service">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="anon-gui-skin-1.3-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-gui-skin/anon-gui-skin">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="anon-enterprise-only-1.3-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-enterprise-only/anon-enterprise-only">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="anon-security-1.3-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-security/anon-security">
+        <dependent-module archiveName="anon-gui-skin-1.4-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/anon-gui-skin/anon-gui-skin">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/anon-gui/target/classes"/>
-        <property name="context-root" value="anon-gui-1.3-SNAPSHOT-enterprise"/>
+        <property name="context-root" value="anon-gui-1.4-SNAPSHOT-free"/>
     </wb-module>
 </project-modules>
