closes #63 not a new menu controller, but a more static pf menu

--- a/anon-gui/src/main/webapp/components/menuPanel.xhtml
+++ b/anon-gui/src/main/webapp/components/menuPanel.xhtml
@@ -9,9 +9,9 @@
 
 
 	<h:form id="menuPanelForm">
-		<p:panelMenu id="menuPanel" style="width:200px">
+		<p:menu id="menuPanel" style="width:200px" >
 		
-			<p:submenu label="Database Connections" >
+			<p:submenu label="Database Connections">
 				<p:menuitem value="Connection" url="/app/connect/"
 					icon="ui-icon-star" />
 				<p:menuitem value="Add" url="/app/connection-add/"
@@ -34,7 +34,7 @@
 					icon="ui-icon-folder-collapsed" />					
 			</p:submenu>
 			
-		</p:panelMenu>
+		</p:menu>
 	</h:form>
 
 </html>
