Enterprise feature: configuration backup- dump the derby #28 - initial changes

--- a/anon-gui/src/main/webapp/components/menuPanel.xhtml
+++ b/anon-gui/src/main/webapp/components/menuPanel.xhtml
@@ -34,6 +34,11 @@
 					icon="ui-icon-folder-collapsed" />					
 			</p:submenu>
 			
+			<p:submenu label="Admin">
+				<p:menuitem value="Backup" action="#{backupBacking.onMenuClicked}"
+					icon="ui-icon-disk" />
+			</p:submenu>
+			
 		</p:menu>
 	</h:form>
 
