--- a/anon-gui/src/main/webapp/layout/layout.xhtml
+++ b/anon-gui/src/main/webapp/layout/layout.xhtml
@@ -22,7 +22,7 @@
   			</ui:insert>
 		</p:dialog>
 			
-		<p:growl id="msgs" showDetail="true" autoUpdate="true" globalOnly="false" showSummary="false"/>
+		<p:growl id="msgs" showDetail="true" autoUpdate="true" globalOnly="false"/>
 
 		<p:layout fullPage="true">
 			<p:layoutUnit position="north" resizable="true" style="border: none;">
