--- a/anon-gui/src/main/webapp/components/menuBar.xhtml
+++ b/anon-gui/src/main/webapp/components/menuBar.xhtml
@@ -1,17 +1,26 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition 
+	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+
 
 	<h:form id="menuForm">
 
+		<style>
+			.backgoundImageAnonimecs{
+				background-image: url('#{resource['images:anonimecs.png']}');
+			}		
+			.backgoundImageAnonimecsOrig{
+				background-image: url('#{resource['images:anonimecsOrig.png']}');
+			}		
+		</style>
+
 		<p:panel id="menuBar" styleClass="menuBar" style="background-image: url('#{resource['images:anonimecs.png']}');">
 		
-<!-- 			<h1>Anonimecs</h1> -->
-			<h1>........</h1>
+			<h1>#{applicationInfo.name}</h1>
 			
 			<h:panelGrid columns="1" styleClass="licensePanel">
 				<h:outputText value="Licensed for #{licenseManager.getCompanyName()}"/>
@@ -53,4 +62,4 @@
 	</h:form>
 	
 	
-</html>
+</ui:composition>
