--- a/anon-gui/src/main/webapp/layout/layout.xhtml
+++ b/anon-gui/src/main/webapp/layout/layout.xhtml
@@ -8,7 +8,11 @@
 
 	<h:head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title><ui:insert name="insert-headtitle">Anon Application</ui:insert></title>
+		<title>
+			<ui:insert name="insert-headtitle">
+				<h:outputText value="Anon Application"/>
+			</ui:insert>
+		</title>
 		<h:outputStylesheet library="css" name="basic.css" />
 	</h:head>
 
