constraint manager refactored to be available on each GUI

--- a/anon-gui-skin/src/main/resources/META-INF/resources/css/basic.css
+++ b/anon-gui-skin/src/main/resources/META-INF/resources/css/basic.css
@@ -2,6 +2,12 @@ body {
     
 }
 
+.noBorderGrid tr, .noBorderGrid td {
+    border: none !important;
+    border-style: none;
+    background-color: inherit;
+}
+
 .loginPanel {
 	margin: 0 auto;
 	width: 360px;
