#3 filter data implemented

--- a/anon-gui/src/main/webapp/components/breadCrumb.xhtml
+++ b/anon-gui/src/main/webapp/components/breadCrumb.xhtml
@@ -10,6 +10,7 @@
 		   	<p:menuitem id="breadTables" 	value="Table list" 	rendered="#{step > 0}" 	url="/app/tables-list/" />
 		   	<p:menuitem id="breadColumns" 	value="Column list" rendered="#{step > 1}" 	url="/app/columns-list/" />
 		   	<p:menuitem id="breadAnonymize"	value="Anonymize" 	rendered="#{step > 2}" 	url="/app/method/" />
+		   	<p:menuitem id="breadRowFilter"	value="Row Filter" 	rendered="#{step > 3}" 	url="/app/row-filter/" />
 	</p:breadCrumb>
 
 </ui:composition>
